[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy_saucer.png" type="Texture" id=1]
[ext_resource path="res://enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/EnemyPaths.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 36.3456

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotate"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
position = Vector2( 90, 60 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 6.28319
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/RESET = SubResource( 2 )
anims/flash = SubResource( 3 )
anims/rotate = SubResource( 4 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="EnemyPaths" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]

[editable path="Explosion"]
